# robotstxt-rb

./: .gitignore  .rubocop.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  README.md  SECURITY.md  robotstxt-rb.gemspec
.github/ffi/: BUILD.bazel  ffi_wrapper.cc  ffi_wrapper.h
.github/workflows/: release.yml
lib/: robotstxt-rb.rb
lib/robotstxt-rb/: ffi.rb
lib/robotstxt-rb/native/darwin-arm64/: librobotstxt_ffi.dylib
lib/robotstxt-rb/native/darwin-x86_64/: librobotstxt_ffi.dylib
lib/robotstxt_ffi/: ffi.rb
spec/: robotstxt_rb_spec.rb  spec_helper.rb
